Updated post request with api key in header

--- a/Day 2 - APIs and Networking/1. HTTP Basics/exercises/1. Browser_Inspector_Exercise.md
+++ b/Day 2 - APIs and Networking/1. HTTP Basics/exercises/1. Browser_Inspector_Exercise.md
@@ -34,13 +34,17 @@
    fetch('https://reqres.in/api/users', {
      method: 'POST',
      headers: {
-       'Content-Type': 'application/json'
+       'Content-Type': 'application/json',
+       'x-api-key': 'reqres-free-v1'
      },
      body: JSON.stringify({
        name: 'McLovin',
        job: 'Organ Donor'
      })
    })
+   .then(response => response.json())
+   .then(data => console.log(data))
+   .catch(error => console.error('Error:', error));
    ```
 4. Observe in the Network tab:
    - The POST request
