--- a/Day 2 - APIs and Networking/1. HTTP Basics/exercises/1. Browser_Inspector_Exercise.md
+++ b/Day 2 - APIs and Networking/1. HTTP Basics/exercises/1. Browser_Inspector_Exercise.md
@@ -56,7 +56,8 @@
    fetch('https://reqres.in/api/login', {
      method: 'POST',
      headers: {
-       'Content-Type': 'application/json'
+       'Content-Type': 'application/json',
+       'x-api-key': 'reqres-free-v1'
      },
      body: JSON.stringify({
        email: 'eve.holt@reqres.in',
